# easy_pyoc

./: .gitignore  LICENSE  OcGui.py  OcGuiRes.py  README.md  __init__.py  pyproject.toml  setup.py
easy_pyoc/: __init__.py  logger.py
easy_pyoc/classes/: color.py  config.py  logger.py  magic.py
easy_pyoc/qt5/: OcGui.py  OcGuiRes.py  __init__.py
easy_pyoc/sock/: __init__.py  client.py  client_socket.py  server.py  server_socket.py  use.py  use_protocol.py
easy_pyoc/utils/: __init__.py  cr4_util.py  crc_util.py  datetime_util.py  exception_util.py  flask_util.py  flast_util.py  func_util.py  json_util.py  json_utl.py  knx_util.py  network_util.py  object_util.py  package_util.py  path_util.py  string_util.py  thread_util.py  toml_util.py  xml_util.py  yaml_util.py
easy_pyoc/utils/data_util/: __init__.py  cr4.py  crc.py
qt5/: OcGui.py  OcGuiRes.py
test/: conftest.py  test_flask.py  test_func_util.py  test_logger.py  test_other_utils.py  test_priority_executor.py  test_sock.py  test_util.py  test_xml_util.py
unittest/: test_func.py
